--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,15 +9,13 @@
     <h1>World's Best Lasagna</h1>
     <h3>From allrecipes.com</h3>
     <img src="../images/lasagna.webp" alt="A picture of the World's Best Lasagna">
-    <p>A delicious home-style meal for your family to enjoy year round. A medium preparation and cook time will leave everyone satisfied plus easy cleanup!</p>
-
-    <p>
-        <h3>How to Make Lasagna</h3>
-        Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:
-        <br><br>
-        <h3>Lasagna Ingredients:</h3>
-        The Allrecipes community adores this lasagna recipe because it's incredibly customizable, so you can easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe, though, these are the ingredients you'll need to add to your grocery list:
-        <br><br>
+        <ul>
+            <li>Prep Time: 30 mins</li>
+            <li>Cook Time: 2 hrs 30 mins</li>
+            <li>Additional Time: 15 mins</li>
+            <li>Total Time: 3 hrs 15 mins</li>
+        </ul>
+        <h3>Ingredients</h3>
             <ul>
                 <li>Meat: This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
                 <li>Onion and garlic: An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
@@ -30,7 +28,6 @@
                 <li>How to Make Lasagna Step-By-Step</li>
                 <li>Here's a very brief overview of what you can expect when you make homemade lasagna:</li>
             </ul>
-        <br>
         <h3>Steps:</h3>
             <ol>
                 <li>Make the meat sauce.</li>
@@ -42,15 +39,5 @@
                 <li>How to Layer Lasagna</li>
                 <li>The detailed layering instructions can be found in the recipe below, but this is the order you'll follow:</li>
             </ol>
-            <br><br>
-        Meat sauce
-        Noodles
-        Ricotta mixture
-        Mozzarella slices
-        Meat sauce
-        Parmesan cheese
-        Repeat the layers, then top with the remaining Parmesan.
-        How Long to Cook Lasagna
-        The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes. Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it.</p>
 </body>
 </html>
